Fixed Layout bug and drag&drop image loading Issue: https://github.com/xdan/jodit/issues/536

--- a/src/modules/dialog/dialog.less
+++ b/src/modules/dialog/dialog.less
@@ -70,6 +70,7 @@
 				rgba(0, 0, 0, 0.19),
 			0 6px 6px rgba(0, 0, 0, 0.23);
 		min-width: 200px;
+		max-width: 100%;
 		min-height: 100px;
 		max-height: 100%;
 
