--- a/src/plugins/image/image-properties/image-properties.less
+++ b/src/plugins/image/image-properties/image-properties.less
@@ -44,14 +44,14 @@
 			align-items: center;
 			padding: 0 !important;
 			margin: 0 !important;
+			min-width: auto;
 
 			a {
 				display: inline-block;
 				cursor: pointer;
 			}
 
-			input[type='number'] {
-				display: inline-block !important;
+			.jodit-input {
 				width: ~'calc(50% - 8px)' !important;
 			}
 		}
